# pdf_grep

./: Cargo.toml  README.md
src/: grep_utils.rs  main.rs  pdf_tools.rs  settings.rs  settings_old.rs  utils.rs
src/pdf_tools/: mod.rs
src/settings/: mod.rs  toml_settings.rs
