[package]
name = "pdf_grep"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
grep = "0.3.1"
pdf-extract = "0.7.4"
rayon = "1.9.0"
regex = "1.10.3"
termcolor = "1.4.1"
walkdir = "2.5.0"
# xpdf_tools = {path = "../../libs/xpdf_tools"}
xpdf_tools = { git = "https://github.com/MichaPau/xpdf_tools.git"}
